update openapi spec
